# DEMP-EvGen

./: .gitignore  CMakeLists.txt  Config.json  EvGenFlowChart.xml  Generator.csh  Generator1.csh  LICENSE  README.md  SigmaL.h  SigmaLT.h  SigmaLT_old.h  SigmaL_old.h  SigmaTT.h  SigmaTT_old.h  SigmaT_old.h  SigmaUT.h  addRootFiles.C  asy.h  asy2fiout.txt  asy3fout.txt  asyfpfsout.txt  asyout.txt  asysfiout.txt  core_20.csh  core_21.csh  core_22.csh  core_23.csh  core_24.csh  core_25.csh  core_26.csh  core_27.csh  core_28.csh  core_29.csh  correction.h  demp  demp_elec.C  demp_elec_C.d  eloss.h  eloss.h~  fsi.h  (+23 more)
Asymmetry/: Asym2.C  AsymPar.C  asy2fiout.txt  asy3fout.txt  asyfpfsout.txt  asyout.txt  asysfiout.txt
LundFiles/: DEMP_Ee_11_Events_10000_File_1.lund
Macros/: E_n_11GeV.root  E_n_8GeV.root  SIDIS_Acceptance.h  Test.C  Triple.C  generate_rate.C
RootFiles/: DEMP_Ee_11_Events_1000_File_1.root
data/input/: asy2fiout.txt  asy3fout.txt  asyfpfsout.txt  (+2 more)
debug/: sigma.txt
include/: .SigmaL.hxx  Asymmetry.hxx  Constants.hxx  CustomRand.h  CustomRand.hxx  DEMPEvent.hxx  FSI.hxx  MatterEffects.hxx  Model.hxx  Particle.hxx  PhaseShift.h  ProductGen-Experimental.hxx  ProductGen.hxx  ScatteredParticleGen.hxx  SigmaCalc.hxx  SigmaT.hxx  SigmaTest.C  TargetGen.hxx  TreeBuilder.hxx
input/: aut_clas.txt
src/: Acceptance.C  Asymmetry.cxx  Asymmetry.hxx  CustomRand.cxx  DEMPEvent.cxx  FSI.cxx  Frame.cxx  Frame.hxx  MatterEffects.cxx  Particle.C  Particle.cxx  Particle.cxx~  Particle.hxx  ProductGen-Experimental.cxx  ProductGen.cxx  ScatteredParticleGen.cxx  SigmaCalc.cxx  TargetGen.cxx  TreeBuilder.cxx  TreeConvert.cxx  main.cxx  test.cxx  test.cxx~
(+4 files in other folders)
